Store full bbox data for images, and use this for dvipdfmx
In the dvipdfmx case, "pagebox" will go wrong unless there is also a
full "bbox" argument. That means we need to store the information at
least in that case. It therefore makes life easier if we simply cache
the bbox in all cases, noting that where (llx,lly) = (0,0) we can
avoid consuming two dimens. In some cases, for example pdfmode,
xdvipdfmx, images always start (0,0) so that is a built-in assumption.

--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -741,18 +741,22 @@
   }
 \cs_new_protected:Npn \@@_image_getbb_auxi:n #1
   {
-    \dim_if_exist:cTF { c__image_ #1 \l_@@_image_attr_tl _ht_dim }
+    \dim_zero:N \l__image_llx_dim
+    \dim_zero:N \l__image_lly_dim
+    \dim_if_exist:cTF { c__image_ #1 \l_@@_image_attr_tl _urx_dim }
       {
-        \dim_set_eq:Nc \l__image_ht_dim
-          { c__image_ #1 \l_@@_image_attr_tl _ht_dim }
-        \dim_set_eq:Nc \l__image_wd_dim
-          { c__image_ #1 \l_@@_image_attr_tl _wd_dim }
+        \dim_set_eq:Nc \l__image_urx_dim
+          { c__image_ #1 \l_@@_image_attr_tl _urx_dim }
+        \dim_set_eq:Nc \l__image_ury_dim
+          { c__image_ #1 \l_@@_image_attr_tl _ury_dim }
       }
       { \@@_image_getbb_auxii:n {#1} }
   }
 %    \begin{macrocode}
 %   Measuring the image is done by boxing up: for PDF images we could
 %   use |\pdftex_pdfximagebbox:D|, but if doesn't work for other types.
+%   As the box will always start at $(0,0)$ there is no need to worry about
+%   the lower-left position.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_image_getbb_auxii:n #1
   {
@@ -766,14 +770,14 @@
       {#1}
     \hbox_set:Nn \l__image_tmp_box
       { \pdftex_pdfrefximage:D \pdftex_pdflastximage:D }
-    \dim_set:Nn \l__image_ht_dim { \box_ht:N \l__image_tmp_box }
-    \dim_set:Nn \l__image_wd_dim { \box_wd:N \l__image_tmp_box }
+    \dim_set:Nn \l__image_urx_dim { \box_wd:N \l__image_tmp_box }
+    \dim_set:Nn \l__image_ury_dim { \box_ht:N \l__image_tmp_box }
     \int_const:cn { c__image_ #1 \l_@@_image_attr_tl _int }
       { \tex_the:D \pdftex_pdflastximage:D }
-    \dim_const:cn { c__image_ #1 \l_@@_image_attr_tl _ht_dim }
-      { \l__image_ht_dim }
-    \dim_const:cn { c__image_ #1 \l_@@_image_attr_tl _wd_dim }
-      { \l__image_wd_dim }
+    \dim_const:cn { c__image_ #1 \l_@@_image_attr_tl _urx_dim }
+      { \l__image_urx_dim }
+    \dim_const:cn { c__image_ #1 \l_@@_image_attr_tl _ury_dim }
+      { \l__image_ury_dim }
   }
 %    \end{macrocode}
 % \end{macro}
@@ -1023,6 +1027,12 @@
       { \@@_image_include_auxiii:nn {#2} {#1} {#3} }
   }
 \cs_generate_variant:Nn \@@_image_include_auxii:nnn { x }
+%    \end{macrocode}
+%  Inclusion using the specials is relatively straight-forward, but there
+%  is one wrinkle. To get the |pagebox| correct for PDF images in all cases,
+%  it is necessary to provide both that information and the |bbox| argument:
+%  odd things happen otherwise!
+%    \begin{macrocode}
 \cs_new_protected:Npn \@@_image_include_auxiii:nnn #1#2#3
   {
     \int_gincr:N \g_@@_image_int
@@ -1034,7 +1044,14 @@
         \int_compare:nNnT \l__image_page_int > 1
           { page ~ \int_use:N \l__image_page_int \c_space_tl }
         \tl_if_empty:NF \l__image_pagebox_tl
-          { pagebox ~ \l__image_pagebox_tl \c_space_tl }
+          {
+            pagebox ~ \l__image_pagebox_tl \c_space_tl
+            bbox ~
+              \dim_to_decimal_in_bp:n \l__image_llx_dim \c_space_tl
+              \dim_to_decimal_in_bp:n \l__image_lly_dim \c_space_tl
+              \dim_to_decimal_in_bp:n \l__image_urx_dim \c_space_tl
+              \dim_to_decimal_in_bp:n \l__image_ury_dim \c_space_tl
+          }
         (#1)
         \bool_if:NT \l__image_interpolate_bool
           { <</Interpolate~true>> }
@@ -1142,22 +1159,24 @@
 \cs_generate_variant:Nn \@@_image_getbb_auxiv:nnNnn { V }
 \cs_new_protected:Npn \@@_image_getbb_auxv:nNnn #1#2#3#4
   {
-    \dim_if_exist:cTF { c__image_ #1#3 _ht_dim }
+    \dim_zero:N \l__image_llx_dim
+    \dim_zero:N \l__image_lly_dim
+    \dim_if_exist:cTF { c__image_ #1#3 _urx_dim }
       {
-        \dim_set_eq:Nc \l__image_ht_dim { c__image_ #1#3 _ht_dim }
-        \dim_set_eq:Nc \l__image_wd_dim { c__image_ #1#3 _wd_dim }
+        \dim_set_eq:Nc \l__image_urx_dim { c__image_ #1#3 _urx_dim }
+        \dim_set_eq:Nc \l__image_ury_dim { c__image_ #1#3 _ury_dim }
       }
       { \@@_image_getbb_auxvi:nNnn {#1} #2 {#3} {#4} }
   }
 \cs_new_protected:Npn \@@_image_getbb_auxvi:nNnn #1#2#3#4
   {
     \hbox_set:Nn \l__image_tmp_box { #2 #1 ~ #4 }
-    \dim_set:Nn \l__image_ht_dim { \box_ht:N \l__image_tmp_box }
-    \dim_set:Nn \l__image_wd_dim { \box_wd:N \l__image_tmp_box }
-    \dim_const:cn { c__image_ #1#3 _ht_dim }
-      { \l__image_ht_dim }
-    \dim_const:cn { c__image_ #1#3 _wd_dim }
-      { \l__image_wd_dim }
+    \dim_set:Nn \l__image_utx_dim { \box_wd:N \l__image_tmp_box }
+    \dim_set:Nn \l__image_ury_dim { \box_ht:N \l__image_tmp_box }
+    \dim_const:cn { c__image_ #1#3 _urx_dim }
+      { \l__image_urx_dim }
+    \dim_const:cn { c__image_ #1#3 _ury_dim }
+      { \l__image_ury_dim }
   }
 \cs_new:Npn \@@_image_getbb_pagebox:w #1 box {#1}
 %    \end{macrocode}
@@ -1169,7 +1188,7 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}{\@@_image_include_pdf:n}
+% \begin{macro}[int]{\@@_image_include_pdf:n}
 %   For PDF images, properly supporting the |pagebox| concept in \XeTeX{}
 %   is best done using the |\xetex_pdffile:D| primitive. The syntax here
 %   is the same as for the image measurement part, although we know at this
