--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -2361,6 +2361,41 @@
 % \end{macro}
 % \end{macro}
 %
+% \subsection{Images}
+%
+% \begin{macro}[int]{\@@_image_getbb_png:n, \@@_image_getbb_jpg:n}
+%   These can be included by extracting the bounding box data.
+%    \begin{macrocode}
+\cs_new_eq:NN \@@_image_getbb_png:n \__image_extract_bb:n
+\cs_new_eq:NN \@@_image_getbb_jpg:n \__image_extract_bb:n
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}[int]{\@@_image_include_png:n, \@@_image_include_jpg:n}
+% \begin{macro}[aux]{\@@_image_include_bitmap_quote:w}
+%   The driver here has built-in support for basic image inclusion (see
+%   \texttt{dvisvgm.def} for a more complex approach, needed if clipping,
+%   \emph{etc.}, is covered at the image driver level). The only issue is
+%   that |#1| must be quoted corrected. The \texttt{dvisvgm:img} operation
+%   will quote the file name, but if it is already quoted (contains spaces)
+%   then we have an issue: we simply strip off any quotes as a result.
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_image_include_png:n #1
+  {
+     \tex_special:D
+       {
+         dvisvgm:img~
+         \dim_to_decimal:n { \l__image_ury_dim } ~
+         \dim_to_decimal:n { \l__image_ury_dim } ~
+         \@@_image_include_bitmap_quote:w #1 " " \q_stop
+       }
+  }
+\cs_new_eq:NN \@@_image_include_jpg:n \@@_image_include_png:n
+\cs_new:Npn \@@_image_include_bitmap_quote:w #1 " #2 " #3 \q_stop { #1#2 }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+%
 % \subsection{Drawing}
 %
 % \begin{macro}[aux]{\@@_draw_literal:n, \@@_draw_literal:x}
