--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -492,12 +492,118 @@
 % mix all of the code by concept is almost unmanageable.) The key parts which
 % are shared are
 % \begin{itemize}
-%   \item Color support is either \texttt{dvips}-like or \texttt{pdfmode}:
-%     other drivers inherit from one of those two.
+%   \item Color support is either \texttt{dvips}-like or \texttt{pdfmode}-like.
 %   \item \texttt{pdfmode} and \texttt{(x)dvipdfmx} share drawing routines.
 %   \item \texttt{xdvipdfmx} is largely the same as \texttt{dvipdfmx} so
 %     takes most of the same code.
 % \end{itemize}
+%
+% \subsection{Color support}
+%
+% Whilst \texttt{(x)dvipdfmx} does have its own approach to color specials,
+% it is easier to use \texttt{dvips}-like ones for all cases except direct
+% PDF output. As such the color code is collected here in two blocks.
+%
+% \subsubsection{\texttt{dvips}-style}
+%
+%    \begin{macrocode}
+%<*dvisvgm|dvipdfmx|dvips|xdvipdfmx>
+%    \end{macrocode}
+%
+% \begin{variable}{\l_@@_color_current_tl}
+%   The current color in driver-dependent format.
+%    \begin{macrocode}
+\tl_new:N \l_@@_color_current_tl
+\tl_set:Nn \l_@@_color_current_tl { gray~0 }
+%<*package>
+\AtBeginDocument
+  {
+    \@ifpackageloaded { color }
+      { \tl_set:Nn \l_@@_color_current_tl { \current@color } }
+      { }
+  }
+%</package>
+%    \end{macrocode}
+% \end{variable}
+%
+% \begin{macro}[int]{\@@_color_ensure_current:}
+% \begin{macro}[aux]{\@@_color_reset:}
+%   Directly set the color using the specials: no optimisation here.
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_color_ensure_current:
+  {
+    \tex_special:D { color~push~\l_@@_color_current_tl }
+    \group_insert_after:N \@@_color_reset:
+  }
+\cs_new_protected:Npn \@@_color_reset:
+  { \tex_special:D { color~pop } }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+%
+%    \begin{macrocode}
+%</dvisvgm|dvipdfmx|dvips|xdvipdfmx>
+%    \end{macrocode}
+%
+% \subsubsection{\texttt{pdfmode}}
+%
+%    \begin{macrocode}
+%<*pdfmode>
+%    \end{macrocode}
+%
+% \begin{variable}{\l_@@_color_current_tl}
+%   The current color in driver-dependent format: pick up the package-mode
+%   data if available.
+%    \begin{macrocode}
+\tl_new:N \l_@@_color_current_tl
+\tl_set:Nn \l_@@_color_current_tl { 0~g~0~G }
+%<*package>
+\AtBeginDocument
+  {
+    \@ifpackageloaded { color }
+      { \tl_set:Nn \l_@@_color_current_tl { \current@color } }
+      { }
+  }
+%</package>
+%    \end{macrocode}
+% \end{variable}
+%
+% \begin{variable}{\l_@@_color_stack_int}
+%   \pdfTeX{} and \LuaTeX{} have multiple stacks available, and to track
+%   which one is in use a variable is required.
+%    \begin{macrocode}
+\int_new:N \l_@@_color_stack_int
+%    \end{macrocode}
+% \end{variable}
+%
+% \begin{macro}[int]{\@@_color_ensure_current:}
+% \begin{macro}[aux]{\@@_color_reset:}
+%   There is a dedicated primitive/primitive interface for setting colors.
+%   As with scoping, this approach is not suitable for cached operations.
+%    \begin{macrocode}
+\cs_new_protected:Npx \@@_color_ensure_current:
+  {
+    \cs_if_exist:NTF \luatex_pdfextension:D
+      { \luatex_pdfextension:D colorstack }
+      { \pdftex_pdfcolorstack:D }
+        \exp_not:N \l_@@_color_stack_int push
+          { \exp_not:N \l_@@_color_current_tl }
+    \group_insert_after:N \exp_not:N \@@_color_reset:
+  }
+\cs_new_protected:Npx \@@_color_reset:
+  {
+    \cs_if_exist:NTF \luatex_pdfextension:D
+      { \luatex_pdfextension:D colorstack }
+      { \pdftex_pdfcolorstack:D }
+        \exp_not:N \l_@@_color_stack_int pop \scan_stop:
+  }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+%
+%    \begin{macrocode}
+%</pdfmode>
+%    \end{macrocode}
 %
 % \subsection{\texttt{dvips} driver}
 %
@@ -626,52 +732,6 @@
   }
 %    \end{macrocode}
 % \end{macro}
-%
-% \subsubsection{Color}
-%
-% The color support code for \texttt{dvips} is also used by other drivers
-% except \texttt{pdfmode}: rather than repeat everything it's therefore defined
-% here.
-%    \begin{macrocode}
-%</dvips>
-%<*!pdfmode>
-%    \end{macrocode}
-%
-% \begin{variable}{\l_@@_color_current_tl}
-%   The current color in driver-dependent format.
-%    \begin{macrocode}
-\tl_new:N \l_@@_color_current_tl
-\tl_set:Nn \l_@@_color_current_tl { gray~0 }
-%<*package>
-\AtBeginDocument
-  {
-    \@ifpackageloaded { color }
-      { \tl_set:Nn \l_@@_color_current_tl { \current@color } }
-      { }
-  }
-%</package>
-%    \end{macrocode}
-% \end{variable}
-%
-% \begin{macro}[int]{\@@_color_ensure_current:}
-% \begin{macro}[aux]{\@@_color_reset:}
-%   Directly set the color using the specials: no optimisation here.
-%    \begin{macrocode}
-\cs_new_protected:Npn \@@_color_ensure_current:
-  {
-    \tex_special:D { color~push~\l_@@_color_current_tl }
-    \group_insert_after:N \@@_color_reset:
-  }
-\cs_new_protected:Npn \@@_color_reset:
-  { \tex_special:D { color~pop } }
-%    \end{macrocode}
-% \end{macro}
-% \end{macro}
-%
-%    \begin{macrocode}
-%</!pdfmode>
-%<*dvips>
-%    \end{macrocode}
 %
 % \subsection{Images}
 %
@@ -1271,58 +1331,6 @@
     \@@_scope_end:
   }
 %    \end{macrocode}
-% \end{macro}
-%
-% \subsubsection{Color}
-%
-% \begin{variable}{\l_@@_color_current_tl}
-%   The current color in driver-dependent format: pick up the package-mode
-%   data if available.
-%    \begin{macrocode}
-\tl_new:N \l_@@_color_current_tl
-\tl_set:Nn \l_@@_color_current_tl { 0~g~0~G }
-%<*package>
-\AtBeginDocument
-  {
-    \@ifpackageloaded { color }
-      { \tl_set:Nn \l_@@_color_current_tl { \current@color } }
-      { }
-  }
-%</package>
-%    \end{macrocode}
-% \end{variable}
-%
-% \begin{variable}{\l_@@_color_stack_int}
-%   \pdfTeX{} and \LuaTeX{} have multiple stacks available, and to track
-%   which one is in use a variable is required.
-%    \begin{macrocode}
-\int_new:N \l_@@_color_stack_int
-%    \end{macrocode}
-% \end{variable}
-%
-% \begin{macro}[int]{\@@_color_ensure_current:}
-% \begin{macro}[aux]{\@@_color_reset:}
-%   There is a dedicated primitive/primitive interface for setting colors.
-%   As with scoping, this approach is not suitable for cached operations.
-%    \begin{macrocode}
-\cs_new_protected:Npx \@@_color_ensure_current:
-  {
-    \cs_if_exist:NTF \luatex_pdfextension:D
-      { \luatex_pdfextension:D colorstack }
-      { \pdftex_pdfcolorstack:D }
-        \exp_not:N \l_@@_color_stack_int push
-          { \exp_not:N \l_@@_color_current_tl }
-    \group_insert_after:N \exp_not:N \@@_color_reset:
-  }
-\cs_new_protected:Npx \@@_color_reset:
-  {
-    \cs_if_exist:NTF \luatex_pdfextension:D
-      { \luatex_pdfextension:D colorstack }
-      { \pdftex_pdfcolorstack:D }
-        \exp_not:N \l_@@_color_stack_int pop \scan_stop:
-  }
-%    \end{macrocode}
-% \end{macro}
 % \end{macro}
 %
 % \subsection{Images}
