--- a/l3packages/xfp/xfp.dtx
+++ b/l3packages/xfp/xfp.dtx
@@ -120,7 +120,7 @@
 %   \item Constants: \texttt{pi}, \texttt{deg} (one degree in radians).
 %   \item Dimensions, automatically expressed in points, \emph{e.g.},
 %     \texttt{pc} is~$12$.
-%   \item Automatic conversion (no need for \cs{number} of
+%   \item Automatic conversion (no need for \cs{number}) of
 %     integer, dimension, and skip variables to floating points,
 %     expressing dimensions in points and ignoring the stretch and
 %     shrink components of skips.
