Various xfpu -> xfp missed

--- a/l3packages/xfp/xfp.dtx
+++ b/l3packages/xfp/xfp.dtx
@@ -27,12 +27,12 @@
 %<package>\@ifpackagelater{expl3}{2017/05/29}
 %<package>  {}
 %<package>  {%
-%<package>    \PackageError{xfpu}{Support package l3kernel too old}
+%<package>    \PackageError{xfp}{Support package l3kernel too old}
 %<package>      {%
 %<package>        Please install an up to date version of l3kernel\MessageBreak
 %<package>        using your TeX package manager or from CTAN.\MessageBreak
 %<package>        \MessageBreak
-%<package>        Loading xfpu will abort!%
+%<package>        Loading xfp will abort!%
 %<package>      }%
 %<package>    \endinput
 %<package>  }
@@ -136,7 +136,7 @@
 %
 % \begin{implementation}
 %
-% \section{\pkg{xfpu} implementation}
+% \section{\pkg{xfp} implementation}
 %
 %    \begin{macrocode}
 %<*package>
