--- a/l3kernel/l3color.dtx
+++ b/l3kernel/l3color.dtx
@@ -51,6 +51,25 @@
 % material here is mainly intended to support a small number of low-level
 % requirements in other \pkg{l3kernel} modules.
 %
+% \begin{variable}[added = 2017-06-15]{\l_color_current_tl}
+%   The color currently active for foreground (text, \emph{etc.}) material.
+%   This is stored in the form of a color model followed by one or more
+%   values in the range $[0,1]$: these determine the color. The model and
+%   applicable data format must be one of the following:
+%   \begin{itemize}
+%     \item \texttt{gray \meta{gray}} Grayscale color with the \meta{gray}
+%       value running from $0$ (fully black) to $1$ (fully white)
+%     \item \texttt{cmyk \meta{cyan} \meta{magenta} \meta{yellow} \meta{black}}
+%     \item \texttt{rgb \meta{red} \meta{green} \meta{blue}}
+%   \end{itemize}
+%   Notice that the value are separated by spaces.
+%   \begin{texnote}
+%     This format is the native one for \texttt{dvips} color specials:
+%     other drivers are expected to convert to their own format when
+%     writing color data to output.
+%   \end{texnote}
+% \end{function}
+%
 % \section{Color in boxes}
 %
 % Controlling the color of text in boxes requires a small number of control
@@ -105,9 +124,21 @@
 %   current color \enquote{now}.
 %    \begin{macrocode}
 \cs_new_protected:Npn \color_ensure_current:
-  { \__driver_color_ensure_current: }
+  {
+    \__driver_color_ensure_current:
+    \group_insert_after:N \__driver_color_reset:
+  }
 %    \end{macrocode}
 % \end{macro}
+%
+% \begin{variable}{\l_color_current_tl}
+%   The current color: the format here is taken from \texttt{dvips} but it
+%   is easy enough to convert to \texttt{pdfmode} as required.
+%    \begin{macrocode}
+\tl_new:N \l_color_current_tl
+\tl_set:Nn \l_color_current_tl { gray~0 }
+%    \end{macrocode}
+% \end{variable}
 %
 %    \begin{macrocode}
 %</initex|package>
