--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -510,21 +510,22 @@
 %<*dvisvgm|dvipdfmx|dvips|xdvipdfmx>
 %    \end{macrocode}
 %
-% \begin{variable}{\l_@@_color_current_tl}
-%   The current color in driver-dependent format.
+% \begin{macro}[aux]{\@@_color_pickup:}
+%   Allow for \LaTexe{}.
 %    \begin{macrocode}
-\tl_new:N \l_@@_color_current_tl
-\tl_set:Nn \l_@@_color_current_tl { gray~0 }
 %<*package>
 \AtBeginDocument
   {
     \@ifpackageloaded { color }
-      { \tl_set:Nn \l_@@_color_current_tl { \current@color } }
-      { }
+      {
+        \cs_new_protected:Npn \@@_color_pickup:
+          { \tl_set_eq:NN \l_color_current_tl \current@color }
+      }
+      { \cs_new_protected:Npn \@@_color_pickup: { } }
   }
 %</package>
 %    \end{macrocode}
-% \end{variable}
+% \end{macro}
 %
 % \begin{macro}[int]{\@@_color_ensure_current:}
 % \begin{macro}[aux]{\@@_color_reset:}
@@ -532,8 +533,10 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_color_ensure_current:
   {
-    \tex_special:D { color~push~\l_@@_color_current_tl }
-    \group_insert_after:N \@@_color_reset:
+%<*package>
+    \@@_color_pickup:
+%</package>
+    \tex_special:D { color~push~\l_color_current_tl }
   }
 \cs_new_protected:Npn \@@_color_reset:
   { \tex_special:D { color~pop } }
@@ -551,22 +554,46 @@
 %<*pdfmode>
 %    \end{macrocode}
 %
-% \begin{variable}{\l_@@_color_current_tl}
+% \begin{macro}[aux]{\@@_color_pickup:}
+% \begin{macro}[aux]{\@@_color_pickup_aux:}
 %   The current color in driver-dependent format: pick up the package-mode
-%   data if available.
+%   data if available. We end up converting back and forward in this route as
+%   we store our color data in \texttt{dvips} format.
 %    \begin{macrocode}
-\tl_new:N \l_@@_color_current_tl
-\tl_set:Nn \l_@@_color_current_tl { 0~g~0~G }
 %<*package>
 \AtBeginDocument
   {
     \@ifpackageloaded { color }
-      { \tl_set:Nn \l_@@_color_current_tl { \current@color } }
-      { }
+      {
+        \cs_new_protected:Npn \@@_color_pickup:
+          {
+            \tl_set:Nx \l_color_current_tl
+              {
+                \exp_after:wN \@@_color_pickup_aux:w
+                  \l_color_current_tl ~ 0 ~ 0 ~ 0 \q_stop
+              }
+          }
+        \cs_new:Npn \@@_color_pickup_aux:w #1 ~ #2 ~ #3 ~ #4 ~ #5 ~ #6 \q_stop
+          {
+            \str_if_eq:nnTF {#2} { g }
+              { gray ~ #1 }
+              {
+                \str_if_eq:nnTF {#4} { rg }
+                  { rgb ~ #1 ~ #2 ~ #3 }
+                  {
+                    \str_if_eq:nnTF {#5} { k }
+                      { cmyk ~ #1 ~ #2 ~ #3 ~ #4 }
+                      { gray ~ #1 }
+                  }
+              }
+          }
+      }
+      { \cs_new_protected:Npn \@@_color_pickup: { } }
   }
 %</package>
 %    \end{macrocode}
-% \end{variable}
+% \end{macro}
+% \end{macro}
 %
 % \begin{variable}{\l_@@_color_stack_int}
 %   \pdfTeX{} and \LuaTeX{} have multiple stacks available, and to track
@@ -577,19 +604,42 @@
 % \end{variable}
 %
 % \begin{macro}[int]{\@@_color_ensure_current:}
+% \begin{macro}[aux, EXP]
+%   {
+%     \@@_color_convert:w, \@@_color_convert_gray:w,
+%     \@@_color_convert_cmyk:w, \@@_color_convert_rgb:w
+%   }
 % \begin{macro}[aux]{\@@_color_reset:}
 %   There is a dedicated primitive/primitive interface for setting colors.
 %   As with scoping, this approach is not suitable for cached operations.
+%   Since we are using the \texttt{dvips} format to store color, there is a
+%   bit of work to correctly place it in the output.
 %    \begin{macrocode}
 \cs_new_protected:Npx \@@_color_ensure_current:
   {
+%<*package>
+    \exp_not:N \@@_color_pickup:
+%</package>
     \cs_if_exist:NTF \luatex_pdfextension:D
       { \luatex_pdfextension:D colorstack }
       { \pdftex_pdfcolorstack:D }
         \exp_not:N \l_@@_color_stack_int push
-          { \exp_not:N \l_@@_color_current_tl }
-    \group_insert_after:N \exp_not:N \@@_color_reset:
+          {
+            \exp_not:N \exp_after:wN
+            \exp_not:N \@@_color_convert:w
+            \exp_not:N \l_color_current_tl
+            \c_space_tl 0 ~ 0 ~ 0
+            \exp_not:N \q_stop
+          }
   }
+\cs_new:Npn \@@_color_convert:w #1 ~
+  { \use:c { @@_color_convert_ #1 :w } }
+\cs_new:Npn \@@_color_convert_gray:w #1 ~ #2 \q_stop
+  { #1 ~ g ~ #1 ~ G }
+\cs_new:Npn \@@_color_convert_cmyk:w #1 ~ #2 ~ #3 ~ #4 \q_stop
+  { #1 ~ #2 ~ #3 ~ rg ~ #1 ~ #2 ~ #3 ~ RG }
+\cs_new:Npn \@@_color_convert_rgb:w #1 ~ #2 ~ #3 ~ #4 ~ #5 \q_stop
+  { #1 ~ #2 ~ #3 ~ #4 ~ k ~ #1 ~ #2 ~ #3 ~ #4 ~ K }
 \cs_new_protected:Npx \@@_color_reset:
   {
     \cs_if_exist:NTF \luatex_pdfextension:D
@@ -598,6 +648,7 @@
         \exp_not:N \l_@@_color_stack_int pop \scan_stop:
   }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 %
