--- a/l3kernel/l3color.dtx
+++ b/l3kernel/l3color.dtx
@@ -51,25 +51,6 @@
 % material here is mainly intended to support a small number of low-level
 % requirements in other \pkg{l3kernel} modules.
 %
-% \begin{variable}[added = 2017-06-15]{\l_color_current_tl}
-%   The color currently active for foreground (text, \emph{etc.}) material.
-%   This is stored in the form of a color model followed by one or more
-%   values in the range $[0,1]$: these determine the color. The model and
-%   applicable data format must be one of the following:
-%   \begin{itemize}
-%     \item \texttt{gray \meta{gray}} Grayscale color with the \meta{gray}
-%       value running from $0$ (fully black) to $1$ (fully white)
-%     \item \texttt{cmyk \meta{cyan} \meta{magenta} \meta{yellow} \meta{black}}
-%     \item \texttt{rgb \meta{red} \meta{green} \meta{blue}}
-%   \end{itemize}
-%   Notice that the value are separated by spaces.
-%   \begin{texnote}
-%     This format is the native one for \texttt{dvips} color specials:
-%     other drivers are expected to convert to their own format when
-%     writing color data to output.
-%   \end{texnote}
-% \end{function}
-%
 % \section{Color in boxes}
 %
 % Controlling the color of text in boxes requires a small number of control
@@ -93,6 +74,27 @@
 %   at the point where the box is set, rather than that in force when the
 %   box is used. This function should usually be used within a
 %   \cs{color_group_begin:} \ldots \cs{color_group_end:} group.
+% \end{function}
+%
+% \subsection{Internal functions}
+%
+% \begin{variable}[added = 2017-06-15]{\l__color_current_tl}
+%   The color currently active for foreground (text, \emph{etc.}) material.
+%   This is stored in the form of a color model followed by one or more
+%   values in the range $[0,1]$: these determine the color. The model and
+%   applicable data format must be one of the following:
+%   \begin{itemize}
+%     \item \texttt{gray \meta{gray}} Grayscale color with the \meta{gray}
+%       value running from $0$ (fully black) to $1$ (fully white)
+%     \item \texttt{cmyk \meta{cyan} \meta{magenta} \meta{yellow} \meta{black}}
+%     \item \texttt{rgb \meta{red} \meta{green} \meta{blue}}
+%   \end{itemize}
+%   Notice that the value are separated by spaces.
+%   \begin{texnote}
+%     This format is the native one for \texttt{dvips} color specials:
+%     other drivers are expected to convert to their own format when
+%     writing color data to output.
+%   \end{texnote}
 % \end{function}
 %
 % \end{documentation}
@@ -131,12 +133,12 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{variable}{\l_color_current_tl}
+% \begin{variable}{\l__color_current_tl}
 %   The current color: the format here is taken from \texttt{dvips} but it
 %   is easy enough to convert to \texttt{pdfmode} as required.
 %    \begin{macrocode}
-\tl_new:N \l_color_current_tl
-\tl_set:Nn \l_color_current_tl { gray~0 }
+\tl_new:N \l__color_current_tl
+\tl_set:Nn \l__color_current_tl { gray~0 }
 %    \end{macrocode}
 % \end{variable}
 %
