--- a/l3trial/xbox/xbox.dtx
+++ b/l3trial/xbox/xbox.dtx
@@ -477,7 +477,7 @@
 % \end{variable}
 %
 % \begin{macro}[int]{\@@_via_tmp_box:nn}
-%   Boxes up |#1| to its natural width in a color-safe \cs{l_@@_tmp_box}.
+%   Boxes up |#1| to its natural width in \cs{l_@@_tmp_box}.
 %   The document-level names for dimensions (\cs{height}, \emph{etc}.) are
 %   then set up, before carrying out whatever \enquote{payload} operation is
 %   supplied as |#2|.
@@ -485,12 +485,7 @@
 \cs_new_protected:Npn \@@_via_tmp_box:nn #1#2
   {
     \group_begin:
-       \hbox_set:Nn \l_@@_tmp_box
-         {
-           \color_group_begin:
-             #1
-           \color_group_end:
-         }
+       \hbox_set:Nn \l_@@_tmp_box {#1}
        \@@_document_names:
        #2
     \group_end:
