Overhaul l3file functions
This update covers several tweaks/improvements
- Use str rather than tl vars where appropriate
- Expose path seq to allow e.g. \graphicspath-like swapping of the
  paths
- Correctly quote *paths* as well as *names* containing spaces
- Better internal data transfer approaches

Building on this will be subsequent improvements to data returned
by l3file.

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -1469,28 +1469,28 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \file_if_exist_input:n #1
   {
-    \file_if_exist:nT {#1}
-      { \@@_input:V \l_@@_internal_name_tl }
+    \file_if_exist:nNT {#1} \l__file_path_str
+      { \@@_input:V \l__file_path_str }
   }
 \cs_new_protected:Npn \file_if_exist_input:nT #1#2
   {
-    \file_if_exist:nT {#1}
+    \file_if_exist:nNT {#1} \l__file_path_str
       {
         #2
-        \@@_input:V \l_@@_internal_name_tl
+        \@@_input:V \l__file_path_str
       }
   }
 \cs_new_protected:Npn \file_if_exist_input:nF #1
   {
-    \file_if_exist:nTF {#1}
-      { \@@_input:V \l_@@_internal_name_tl }
+    \file_if_exist:nNTF {#1} \l__file_path_str
+      { \@@_input:V \l__file_path_str }
   }
 \cs_new_protected:Npn \file_if_exist_input:nTF #1#2
   {
-    \file_if_exist:nTF {#1}
+    \file_if_exist:nNTF {#1} \l__file_path_str
       {
         #2
-        \@@_input:V \l_@@_internal_name_tl
+        \@@_input:V \l__file_path_str
       }
   }
 %    \end{macrocode}
@@ -2162,7 +2162,7 @@
 \cs_generate_variant:Nn \tl_gset_from_file:Nnn { c }
 \cs_new_protected:Npn \@@_set_from_file:NNnn #1#2#3#4
   {
-    \__file_if_exist:nT {#4}
+    \file_if_exist:nNTF {#4} \l__file_path_str
       {
         \group_begin:
           \exp_args:No \etex_everyeof:D
@@ -2170,10 +2170,11 @@
           #3 \scan_stop:
           \exp_after:wN \@@_from_file_do:w
           \exp_after:wN \prg_do_nothing:
-            \tex_input:D \l__file_internal_name_tl \scan_stop:
+            \tex_input:D \l__file_path_str \scan_stop:
         \exp_args:NNNo \group_end:
         #1 #2 \l_@@_internal_a_tl
       }
+      { \__file_missing:n {#4} }
   }
 \exp_args:Nno \use:nn
   { \cs_new_protected:Npn \@@_from_file_do:w #1 }
@@ -2204,16 +2205,17 @@
 \cs_generate_variant:Nn \tl_gset_from_file_x:Nnn { c }
 \cs_new_protected:Npn \@@_set_from_file_x:NNnn #1#2#3#4
   {
-    \__file_if_exist:nT {#4}
+    \file_if_exist:nNTF {#4} \l__file_path_str
       {
         \group_begin:
           \etex_everyeof:D { \exp_not:N }
           #3 \scan_stop:
           \tl_set:Nx \l_@@_internal_a_tl
-            { \tex_input:D \l__file_internal_name_tl \c_space_token }
+            { \tex_input:D \l__file_path_str \c_space_token }
         \exp_args:NNNo \group_end:
         #1 #2 \l_@@_internal_a_tl
       }
+      { \__file_missing:n {#4} }
   }
 %    \end{macrocode}
 % \end{macro}
