--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -68,12 +68,19 @@
 %
 % \section{File operation functions}
 %
-% \begin{variable}{\g_file_current_name_tl}
+% \begin{variable}[added = 2017-06-18]{\g_file_current_name_str}
 %   Contains the name of the current \LaTeX{} file. This variable
 %   should not be modified: it is intended for information only. It
 %   will be equal to \cs{c_sys_jobname_str} at the start of a \LaTeX{}
 %   run and will be modified each time a file is read using
 %   \cs{file_input:n}.
+% \end{variable}
+%
+% \begin{variable}[added = 2017-06-18]{\l_file_search_path_seq}
+%   Each entry is a (relative) directory which should be searched when
+%   seeking a file. The entries will not be expanded when used so
+%   may contain active characters but should not feature any variable
+%   content.
 % \end{variable}
 %
 % \begin{function}[TF, updated = 2012-02-10]{\file_if_exist:n}
@@ -82,18 +89,27 @@
 %   \end{syntax}
 %   Searches for \meta{file name} using the current \TeX{} search
 %   path and the additional paths controlled by
-%   \cs{file_path_include:n}).
+%   \cs{l_file_seach_path_seq}).
 % \end{function}
 %
-% \begin{function}[updated = 2012-02-10]{\file_add_path:nN}
+% \begin{function}[TF, added = 2017-06-19]{\file_if_exist:nN}
 %   \begin{syntax}
-%     \cs{file_add_path:nN} \Arg{file name} \meta{tl var}
+%     \cs{file_if_exist:nTF} \Arg{file name} \meta{str var} \Arg{true code} \Arg{false code}
+%   \end{syntax}
+%   Searches for \meta{file name} using the current \TeX{} search
+%   path and the additional paths controlled by
+%   \cs{l_file_seach_path_seq}). The resulting full path is returned as
+%   \meta{str var}, which will be empty if the file is not found.
+% \end{function}
+%
+% \begin{function}[updated = 2017-06-19]{\file_find:nN, \file_find:VN}
+%   \begin{syntax}
+%     \cs{file_find:nN} \Arg{file name} \meta{str var}
 %   \end{syntax}
 %   Searches for \meta{file name} in the path as detailed for
-%   \cs{file_if_exist:nTF}, and if found sets the \meta{tl var} the
+%   \cs{file_if_exist:nTF}, and if found sets the \meta{str var} the
 %   fully-qualified name of the file, \emph{i.e.}~the path and file name.
-%   If the file is not found then the \meta{tl var} will contain the
-%   marker \cs{q_no_value}.
+%   If the file is not found then the \meta{str var} will be empty.
 % \end{function}
 %
 % \begin{function}[updated = 2012-02-17]{\file_input:n}
@@ -105,28 +121,6 @@
 %   additional \LaTeX{} source. All files read are recorded
 %   for information and the file name stack is updated by this
 %   function. An error will be raised if the file is not found.
-% \end{function}
-%
-% \begin{function}[updated = 2012-07-04]{\file_path_include:n}
-%   \begin{syntax}
-%     \cs{file_path_include:n} \Arg{path}
-%   \end{syntax}
-%   Adds \meta{path} to the list of those used to search when reading
-%   files. The assignment is local.
-%   The \meta{path} is processed in the same way as a \meta{file name},
-%   \emph{i.e.}, with \texttt{x}-type expansion except active
-%   characters.
-% \end{function}
-%
-% \begin{function}[updated = 2012-07-04]{\file_path_remove:n}
-%   \begin{syntax}
-%     \cs{file_path_remove:n} \Arg{path}
-%   \end{syntax}
-%   Removes \meta{path} from the list of those used to search when reading
-%   files. The assignment is local.
-%   The \meta{path} is processed in the same way as a \meta{file name},
-%   \emph{i.e.}, with \texttt{x}-type expansion except active
-%   characters.
 % \end{function}
 %
 % \begin{function}{\file_list:}
@@ -593,6 +587,11 @@
 %   Used to test for the existence of files when opening.
 % \end{variable}
 %
+% \begin{variable}{\l__file_name_str, \l__file_path_str}
+%   Used to store and transfer the file name and (partial) file path
+%   whilst reading files.
+% \end{variable}
+%
 % \begin{variable}{\l__file_internal_name_tl}
 %   Used to return the full name of a file for internal use. This is
 %   set by \cs{file_if_exist:nTF} and \cs{__file_if_exist:nT}, and
@@ -600,16 +599,24 @@
 %   further operations intervene.
 % \end{variable}
 %
-% \begin{function}[added = 2012-02-09]{\__file_name_sanitize:nn}
+% \begin{function}[added = 2017-06-19]{\__file_name_sanitize:nN}
 %   \begin{syntax}
-%     \cs{__file_name_sanitize:nn} \Arg{name} \Arg{tokens}
+%     \cs{__file_name_sanitize:nn} \Arg{name} \Arg{str var}
 %   \end{syntax}
 %   Exhaustively-expands the \meta{name} with the exception of any
 %   category \meta{active} (catcode~$13$) tokens, which are not expanded.
 %   The list of \meta{active} tokens is taken from \cs{l_char_active_seq}.
-%   The \meta{sanitized name} is then inserted (in braces) after the
-%   \meta{tokens}, which should further process the file name. If any
-%   spaces are found in the name after expansion, an error is raised.
+%   The \meta{str var} is then set to the \meta{sanitized name}.
+% \end{function}
+%
+% \begin{function}[added = 2017-06-19]
+%   {\__file_name_quote:nN, \__file_name_quote:VN}
+%   \begin{syntax}
+%     \cs{__file_name_quote:nn} \Arg{name} \Arg{str var}
+%   \end{syntax}
+%   Set the \meta{str var} to the \meta{name} quoted using |"| at each
+%   end if required by the presence of spaces in the \meta{name}. Any existing
+%   |"| tokens will be removed.
 % \end{function}
 %
 % \subsection{Internal input--output functions}
@@ -625,7 +632,7 @@
 %   higher-level
 %   functions which have already fully expanded the \meta{file name} and which
 %   need to perform multiple open or close operations. See for example the
-%   implementation of \cs{file_add_path:nN},
+%   implementation of \cs{file_find:nN},
 % \end{function}
 %
 % \begin{function}[added = 2014-08-23]{\__iow_with:Nnn}
@@ -659,23 +666,23 @@
 %
 % \subsection{File operations}
 %
-% \begin{variable}{\g_file_current_name_tl}
+% \begin{variable}{\g_file_current_name_str}
 %   The name of the current file should be available at all times.
 %   For the format the file name needs to be picked up at the start of the
 %   file. In \LaTeXe{} package mode the current file name is collected from
 %   \tn{@currname}.
 %    \begin{macrocode}
-\tl_new:N \g_file_current_name_tl
+\str_new:N \g_file_current_name_str
 %<*initex>
 \tex_everyjob:D \exp_after:wN
   {
     \tex_the:D \tex_everyjob:D
-    \tl_gset:Nx \g_file_current_name_tl { \tex_jobname:D }
+    \str_gset:Nx \g_file_current_name_str { \tex_jobname:D }
   }
 %</initex>
 %<*package>
 \cs_if_exist:NT \@currname
-  { \tl_gset_eq:NN \g_file_current_name_tl \@currname }
+  { \str_gset_eq:NN \g_file_current_name_str \@currname }
 %</package>
 %    \end{macrocode}
 % \end{variable}
@@ -705,25 +712,25 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}{\l_@@_internal_tl}
-%   Used as a short-term scratch variable.  It may be possible to reuse
-%   \cs{l_@@_internal_name_tl} there.
+% \begin{variable}{\l_@@_tmp_tl}
+%   Used as a short-term scratch variable.
 %    \begin{macrocode}
-\tl_new:N \l_@@_internal_tl
+\tl_new:N \l_@@_tmp_tl
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}{\l_@@_internal_name_tl}
-%   Used to return the fully-qualified name of a file.
+% \begin{variable}{\l__file_name_str, \l__file_path_str}
+%   For storing the name and full path whilst passing data internally.
 %    \begin{macrocode}
-\tl_new:N \l_@@_internal_name_tl
+\str_new:N \l__file_name_str
+\str_new:N \l__file_path_str
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}{\l_@@_search_path_seq}
+% \begin{variable}{\l_file_search_path_seq}
 %   The current search path.
 %    \begin{macrocode}
-\seq_new:N \l_@@_search_path_seq
+\seq_new:N \l_file_search_path_seq
 %    \end{macrocode}
 % \end{variable}
 %
@@ -736,16 +743,17 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}{\l_@@_internal_seq}
+% \begin{variable}{\l_@@_tmp_seq}
 %   Scratch space for comma list conversion in package mode.
 %    \begin{macrocode}
 %<*package>
-\seq_new:N \l_@@_internal_seq
+\seq_new:N \l_@@_tmp_seq
 %</package>
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{macro}[int]{\@@_name_sanitize:nn}
+% \begin{macro}[int]{\__file_name_sanitize:nN}
+% \begin{macro}[int]{\__file_name_quote:nN, \__file_name_quote:VN}
 % \begin{macro}[int, aux]{\@@_name_sanitize_aux:n}
 %   For converting a token list to a string where active characters are treated
 %   as strings from the start. The logic to the quoting normalisation is the
@@ -753,54 +761,53 @@
 %   assuming they balance strip all of them out before quoting the entire name
 %   if it contains spaces.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_name_sanitize:nn #1#2
+\cs_new_protected:Npn \__file_name_sanitize:nN #1#2
   {
     \group_begin:
       \seq_map_inline:Nn \l_char_active_seq
         {
-          \tl_set:Nx \l_@@_internal_tl { \iow_char:N ##1 }
-          \char_set_active_eq:NN ##1 \l_@@_internal_tl
+          \tl_set:Nx \l_@@_tmp_tl { \iow_char:N ##1 }
+          \char_set_active_eq:NN ##1 \l_@@_tmp_tl
         }
-      \tl_set:Nx \l_@@_internal_name_tl {#1}
-      \tl_set:Nx \l_@@_internal_name_tl
-        { \tl_to_str:N \l_@@_internal_name_tl }
-      \int_compare:nNnTF
-        {
-          \int_mod:nn
-            {
-              0 \tl_map_function:NN \l_@@_internal_name_tl
-                \@@_name_sanitize_aux:n
-            }
-            { 2 }
-        }
-        = 0
-        {
-          \tl_remove_all:Nn \l_@@_internal_name_tl { " }
-          \tl_if_in:NnT \l_@@_internal_name_tl { ~ }
-            {
-              \tl_set:Nx \l_@@_internal_name_tl
-                { " \exp_not:V \l_@@_internal_name_tl " }
-            }
-        }
-        {
-          \__msg_kernel_error:nnx
-            { kernel } { unbalanced-quote-in-filename }
-            { \l_@@_internal_name_tl }
-        }
-      \use:x
-        {
-          \group_end:
-          \exp_not:n {#2} { \l_@@_internal_name_tl }
-        }
+      \tl_set:Nx \l_@@_tmp_tl {#1}
+      \tl_set:Nx \l_@@_tmp_tl
+        { \tl_to_str:N \l_@@_tmp_tl }
+    \exp_args:NNNV \group_end:
+    \str_set:Nn #2 \l_@@_tmp_tl
   }
-\cs_new:Npn \@@_name_sanitize_aux:n #1
+\cs_new_protected:Npn \__file_name_quote:nN #1#2
+  {
+    \str_set:Nn #2 {#1}
+    \int_compare:nNnTF
+      {
+        \int_mod:nn
+          {
+            0 \tl_map_function:NN #2
+              \@@_name_quote_aux:n
+          }
+          { 2 }
+      }
+      = 0
+      {
+        \tl_remove_all:Nn #2 { " }
+        \tl_if_in:NnT #2 { ~ }
+          { \str_set:Nx #2 { " \exp_not:V #2 " } }
+      }
+      {
+        \__msg_kernel_error:nnx
+          { kernel } { unbalanced-quote-in-filename } {#2}
+      }
+  }
+\cs_generate_variant:Nn \__file_name_quote:nN { V }
+\cs_new:Npn \@@_name_quote_aux:n #1
   { \token_if_eq_charcode:NNT #1 " { + 1 } }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
+% \end{macro}
 %
-% \begin{macro}{\file_add_path:nN}
-% \begin{macro}[aux]{\@@_add_path:nN, \@@_add_path_search:nN}
+% \begin{macro}{\file_find:nN, \file_find:VN}
+% \begin{macro}[aux]{\@@_find_search:N}
 %   The way to test if a file exists is to try to open it: if it does not
 %   exist then \TeX{} will report end-of-file. For files which are in the
 %   current directory, this is straight-forward.  For other locations, a
@@ -808,42 +815,46 @@
 %   location is of course treated as the correct one. If nothing is found,
 %   |#2| is returned empty.
 %    \begin{macrocode}
-\cs_new_protected:Npn \file_add_path:nN #1
-  { \@@_name_sanitize:nn {#1} { \@@_add_path:nN } }
-\cs_new_protected:Npn \@@_add_path:nN #1#2
+\cs_new_protected:Npn \file_find:nN #1#2
   {
-    \__ior_open:Nn \g_@@_internal_ior {#1}
+    \__file_name_sanitize:nN {#1} \l__file_name_str
+    \__file_name_quote:VN \l__file_name_str \l__file_path_str
+    \__ior_open:No \g_@@_internal_ior \l__file_path_str
     \ior_if_eof:NTF \g_@@_internal_ior
-      { \@@_add_path_search:nN {#1} #2 }
-      { \tl_set:Nn #2 {#1} }
+      { \@@_find_search:N #2 }
+      { \str_set_eq:NN #2 \l__file_path_str }
     \ior_close:N \g_@@_internal_ior
   }
-\cs_new_protected:Npn \@@_add_path_search:nN #1#2
+\cs_generate_variant:Nn \file_find:nN { V }
+\cs_new_protected:Npn \@@_find_search:N #1
   {
-    \tl_set:Nn #2 { \q_no_value  }
+    \str_clear:N #1
 %<*package>
     \cs_if_exist:NT \input@path
       {
         \seq_set_eq:NN \l_@@_saved_search_path_seq
-          \l_@@_search_path_seq
-        \seq_set_split:NnV \l_@@_internal_seq { , } \input@path
-        \seq_concat:NNN \l_@@_search_path_seq
-          \l_@@_search_path_seq \l_@@_internal_seq
+          \l_file_search_path_seq
+        \seq_set_split:NnV \l_@@_tmp_seq { , } \input@path
+        \seq_concat:NNN \l_file_search_path_seq
+          \l_file_search_path_seq \l_@@_tmp_seq
       }
 %</package>
-    \seq_map_inline:Nn \l_@@_search_path_seq
+    \seq_map_inline:Nn \l_file_search_path_seq
       {
-        \__ior_open:Nn \g_@@_internal_ior { ##1 #1 }
+        \str_set:Nx \l__file_path_str
+          { \tl_to_str:n {##1} \l__file_name_str }
+        \__file_name_quote:VN \l__file_path_str \l__file_path_str
+        \__ior_open:NV \g_@@_internal_ior \l__file_path_str
         \ior_if_eof:NF \g_@@_internal_ior
           {
-            \tl_set:Nx #2 { ##1 #1 }
+            \str_set_eq:NN #1 \l__file_path_str
             \seq_map_break:
           }
       }
 %<*package>
     \cs_if_exist:NT \input@path
       {
-        \seq_set_eq:NN \l_@@_search_path_seq
+        \seq_set_eq:NN \l_file_search_path_seq
           \l_@@_saved_search_path_seq
       }
 %</package>
@@ -853,6 +864,7 @@
 % \end{macro}
 %
 % \begin{macro}[TF]{\file_if_exist:n}
+% \begin{macro}[TF]{\file_if_exist:nN}
 %   The test for the existence of a file is a wrapper around the function to
 %   add a path to a file. If the file was found, the path will contain
 %   something, whereas if the file was not located then the return value
@@ -860,16 +872,24 @@
 %    \begin{macrocode}
 \prg_new_protected_conditional:Npnn \file_if_exist:n #1 { T , F , TF }
   {
-    \file_add_path:nN {#1} \l_@@_internal_name_tl
-    \quark_if_no_value:NTF \l_@@_internal_name_tl
+    \file_find:nN {#1} \l__file_path_str
+    \str_if_empty:NTF \l__file_path_str
+      { \prg_return_false: }
+      { \prg_return_true: }
+  }
+\prg_new_protected_conditional:Npnn \file_if_exist:nN #1#2 { T , F , TF }
+  {
+    \file_find:nN {#1} #2
+    \str_if_empty:NTF #2
       { \prg_return_false: }
       { \prg_return_true: }
   }
 %    \end{macrocode}
 % \end{macro}
+% \end{macro}
 %
 % \begin{macro}{\file_input:n}
-% \begin{macro}[int]{\@@_if_exist:nT}
+% \begin{macro}[aux]{\@@_missing:n}
 % \begin{macro}[aux]{\@@_input:n, \@@_input:V}
 % \begin{macro}[aux]{\@@_input_aux:n, \@@_input_aux:o}
 %   Loading a file is done in a safe way, checking first that the file
@@ -879,21 +899,15 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \file_input:n #1
   {
-    \@@_if_exist:nT {#1}
-      { \@@_input:V \l_@@_internal_name_tl }
+    \file_if_exist:nNTF {#1} \l__file_path_str
+      { \@@_input:V \l__file_path_str }
+      { \@@_missing:n {#1} }
   }
-%    \end{macrocode}
-%   This code is spun out as a separate function to encapsulate the
-%   error message into a easy-to-reuse form.
-%    \begin{macrocode}
-\cs_new_protected:Npn \@@_if_exist:nT #1#2
+\cs_new_protected:Npn \@@_missing:n #1
   {
-    \file_if_exist:nTF {#1}
-      {#2}
-      {
-        \@@_name_sanitize:nn {#1}
-          { \__msg_kernel_error:nnx { kernel } { file-not-found } }
-      }
+    \__file_name_sanitize:nN {#1} \l__file_name_str
+    \__msg_kernel_error:nnx { kernel } { file-not-found }
+      { \l__file_name_str }
   }
 \cs_new_protected:Npn \@@_input:n #1
   {
@@ -915,34 +929,12 @@
     \seq_gpush:No \g_@@_stack_seq \g_file_current_name_tl
     \tl_gset:Nn \g_file_current_name_tl {#1}
     \tex_input:D #1 \c_space_tl
-    \seq_gpop:NN \g_@@_stack_seq \l_@@_internal_tl
-    \tl_gset_eq:NN \g_file_current_name_tl \l_@@_internal_tl
+    \seq_gpop:NN \g_@@_stack_seq \l_@@_tmp_tl
+    \tl_gset_eq:NN \g_file_current_name_tl \l_@@_tmp_tl
   }
 \cs_generate_variant:Nn \@@_input_aux:n { o }
 %    \end{macrocode}
 % \end{macro}
-% \end{macro}
-% \end{macro}
-% \end{macro}
-%
-% \begin{macro}{\file_path_include:n}
-% \begin{macro}{\file_path_remove:n}
-% \begin{macro}[aux]{\@@_path_include:n}
-%   Wrapper functions to manage the search path.
-%    \begin{macrocode}
-\cs_new_protected:Npn \file_path_include:n #1
-  { \@@_name_sanitize:nn {#1} { \@@_path_include:n } }
-\cs_new_protected:Npn \@@_path_include:n #1
-  {
-    \seq_if_in:NnF \l_@@_search_path_seq {#1}
-      { \seq_put_right:Nn \l_@@_search_path_seq {#1} }
-  }
-\cs_new_protected:Npn \file_path_remove:n #1
-  {
-    \@@_name_sanitize:nn {#1}
-      { \seq_remove_all:Nn \l_@@_search_path_seq }
-  }
-%    \end{macrocode}
 % \end{macro}
 % \end{macro}
 % \end{macro}
@@ -956,20 +948,20 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \file_list:
   {
-    \seq_set_eq:NN \l_@@_internal_seq \g_@@_record_seq
+    \seq_set_eq:NN \l_@@_tmp_seq \g_@@_record_seq
 %<*package>
     \clist_if_exist:NT \@filelist
       {
         \clist_map_inline:Nn \@filelist
           {
-            \seq_put_right:No \l_@@_internal_seq
+            \seq_put_right:No \l_@@_tmp_seq
               { \tl_to_str:n {##1} }
           }
       }
 %</package>
-    \seq_remove_duplicates:N \l_@@_internal_seq
+    \seq_remove_duplicates:N \l_@@_tmp_seq
     \iow_log:n { *~File~List~* }
-    \seq_map_inline:Nn \l_@@_internal_seq { \iow_log:n {##1} }
+    \seq_map_inline:Nn \l_@@_tmp_seq { \iow_log:n {##1} }
     \iow_log:n { ************* }
   }
 %    \end{macrocode}
@@ -1070,7 +1062,6 @@
 % \end{macro}
 %
 % \begin{macro}{\ior_open:Nn, \ior_open:cn}
-% \begin{macro}[aux]{\@@_open_aux:Nn}
 %   Opening an input stream requires a bit of pre-processing. The file name
 %   is sanitized to deal with active characters, before an auxiliary adds a
 %   path and checks that the file really exists. If those two tests pass, then
@@ -1078,41 +1069,37 @@
 %   streams.
 %    \begin{macrocode}
 \cs_new_protected:Npn \ior_open:Nn #1#2
-  { \__file_name_sanitize:nn {#2} { \@@_open_aux:Nn #1 } }
-\cs_generate_variant:Nn \ior_open:Nn { c }
-\cs_new_protected:Npn \@@_open_aux:Nn #1#2
   {
-    \file_add_path:nN {#2} \l__file_internal_name_tl
-    \quark_if_no_value:NTF \l__file_internal_name_tl
-      { \__msg_kernel_error:nnx { kernel } { file-not-found } {#2} }
-      { \@@_open:No #1 \l__file_internal_name_tl }
+    \file_find:nN {#2} \l__file_path_str
+    \str_if_empty:NTF \l__file_path_str
+      {
+        \__file_name_sanitize:nN {#2} \l__file_name_str
+        \__msg_kernel_error:nnx { kernel } { file-not-found } \l__file_name_str
+      }
+      { \@@_open:No #1 \l__file_path_str }
   }
+\cs_generate_variant:Nn \ior_open:Nn { c }
 %    \end{macrocode}
-% \end{macro}
 % \end{macro}
 %
 % \begin{macro}[TF]{\ior_open:Nn, \ior_open:cn}
-% \begin{macro}[aux]{\@@_open_aux:NnTF}
 %   Much the same idea for opening a read with a conditional, except the
 %   auxiliary function does not issue an error if the file is not found.
 %    \begin{macrocode}
 \prg_new_protected_conditional:Npnn \ior_open:Nn #1#2 { T , F , TF }
-  { \__file_name_sanitize:nn {#2} { \@@_open_aux:NnTF #1 } }
-\cs_generate_variant:Nn \ior_open:NnT  { c }
-\cs_generate_variant:Nn \ior_open:NnF  { c }
-\cs_generate_variant:Nn \ior_open:NnTF { c }
-\cs_new_protected:Npn \@@_open_aux:NnTF #1#2
   {
-    \file_add_path:nN {#2} \l__file_internal_name_tl
-    \quark_if_no_value:NTF \l__file_internal_name_tl
+    \file_find:VN \l__file_name_str \l__file_path_str
+    \str_if_empty:NTF \l__file_path_str
       { \prg_return_false: }
       {
-        \@@_open:No #1 \l__file_internal_name_tl
+        \@@_open:No #1 \l__file_path_str
         \prg_return_true:
       }
   }
+\cs_generate_variant:Nn \ior_open:NnT  { c }
+\cs_generate_variant:Nn \ior_open:NnF  { c }
+\cs_generate_variant:Nn \ior_open:NnTF { c }
 %    \end{macrocode}
-% \end{macro}
 % \end{macro}
 %
 % \begin{macro}[int]{\@@_new:N}
@@ -1437,19 +1424,16 @@
 % \end{macro}
 %
 % \begin{macro}{\iow_open:Nn, \iow_open:cn}
-% \begin{macro}[int]{\@@_open:Nn}
-% \begin{macro}[aux]{\@@_open_stream:Nn}
+% \begin{macro}[aux]{\@@_open_stream:Nn, \@@_open_stream:NV}
 %   The same idea as for reading, but without the path and without the need
 %   to allow for a conditional version.
 %    \begin{macrocode}
 \cs_new_protected:Npn \iow_open:Nn #1#2
-  { \__file_name_sanitize:nn {#2} { \@@_open:Nn #1 } }
-\cs_generate_variant:Nn \iow_open:Nn { c }
-\cs_new_protected:Npn \@@_open:Nn #1#2
   {
+    \__file_name_sanitize:nN {#2} \l__file_name_str
     \iow_close:N #1
     \seq_gpop:NNTF \g_@@_streams_seq \l_@@_stream_tl
-      { \@@_open_stream:Nn #1 {#2} }
+      { \@@_open_stream:NV #1 \l__file_name_str }
 %<*initex>
       { \__msg_kernel_fatal:nn { kernel } { output-streams-exhausted } }
 %</initex>
@@ -1457,19 +1441,19 @@
       {
         \@@_new:N #1
         \tl_set:Nx \l_@@_stream_tl { \int_eval:n {#1} }
-        \@@_open_stream:Nn #1 {#2}
+        \@@_open_stream:NV #1 \l__file_name_str 
       }
 %</package>
   }
-\cs_generate_variant:Nn \@@_open:Nn { No }
+\cs_generate_variant:Nn \iow_open:Nn { c }
 \cs_new_protected:Npn \@@_open_stream:Nn #1#2
   {
     \tex_global:D \tex_chardef:D #1 = \l_@@_stream_tl \scan_stop:
     \prop_gput:NVn \g_@@_streams_prop #1 {#2}
     \tex_immediate:D \tex_openout:D #1 #2 \scan_stop:
   }
+\cs_generate_variant:Nn \@@_open_stream:Nn { NV }
 %    \end{macrocode}
-% \end{macro}
 % \end{macro}
 % \end{macro}
 %
@@ -2216,6 +2200,49 @@
 %    \end{macrocode}
 %
 % \subsection{Deprecated functions}
+%
+% \begin{variable}{\g_file_current_name_tl}
+%   For removal after 2018-12-31.
+%    \begin{macrocode}
+\tl_new:N \g_file_current_name_tl
+\tl_gset:Nn \g_file_current_name_tl { \g_file_current_name_str }
+%    \end{macrocode}
+% \end{variable}
+%
+% \begin{macro}{\file_path_include:n}
+% \begin{macro}{\file_path_remove:n}
+% \begin{macro}[aux]{\__file_path_include:n}
+%   Wrapper functions to manage the search path.
+%    \begin{macrocode}
+\cs_new_protected:Npn \file_path_include:n #1
+  {
+    \__file_name_sanitize:nN {#1} \l__file_path_str
+    \seq_if_in:NVF \l_file_search_path_seq \l__file_path_str
+      { \seq_put_right:NV \l_file_search_path_seq \l__file_path_str }
+  }
+\cs_new_protected:Npn \file_path_remove:n #1
+  {
+    \__file_name_sanitize:nN {#1} \l__file_path_str
+    \seq_remove_all:NV \l_file_search_path_seq \l__file_path_str
+  }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+%
+% \begin{macro}{\file_add_path:nN}
+%   For removal after 2018-12-31.
+%    \begin{macrocode}
+\cs_new_protected:Npn \file_add_path:nN #1#2
+  {
+    \file_find:nN {#1} #2
+    \str_if_empty:NT #2
+      { \tl_set:Nn #2 { \q_no_value } }
+  }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+% \end{macro}
 %
 % \begin{macro}[added = 2012-06-24, updated = 2012-07-31, deprecated=2017-12-31]{\ior_get_str:NN}
 %   For removal after 2017-12-31.
