Some tl -> str missed

--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -706,7 +706,7 @@
 \tex_everyjob:D \exp_after:wN
   {
     \tex_the:D \tex_everyjob:D
-    \seq_gput_right:NV \g_@@_record_seq \g_file_current_name_tl
+    \seq_gput_right:NV \g_@@_record_seq \g_file_current_name_str
   }
 %</initex>
 %    \end{macrocode}
@@ -926,11 +926,11 @@
       { \@addtofilelist {#1} }
       { \seq_gput_right:Nn \g_@@_record_seq {#1} }
 %</package>
-    \seq_gpush:No \g_@@_stack_seq \g_file_current_name_tl
-    \tl_gset:Nn \g_file_current_name_tl {#1}
+    \seq_gpush:No \g_@@_stack_seq \g_file_current_name_str
+    \tl_gset:Nn \g_file_current_name_str {#1}
     \tex_input:D #1 \c_space_tl
     \seq_gpop:NN \g_@@_stack_seq \l_@@_tmp_tl
-    \tl_gset_eq:NN \g_file_current_name_tl \l_@@_tmp_tl
+    \tl_gset_eq:NN \g_file_current_name_str \l_@@_tmp_tl
   }
 \cs_generate_variant:Nn \@@_input_aux:n { o }
 %    \end{macrocode}
