Correct value of \g_file_current_name_str
This largely relies on the fact that LaTeX2e already tracks the
value in the preamble using \@pushfilename/\@popfilename. To grab the
'new' values we have to do a bit of cheating, relying on the fact that
\@pushfilename is always followed by

    \xdef\@currname{#1}%

Currently, there is no attempt to pick up from \input or similar:
that needs something like the filehooks package and is likely too
invasive at the LaTeX2e for us.

--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -688,9 +688,36 @@
 % \end{variable}
 %
 % \begin{variable}{\g_@@_stack_seq}
-%   The input list of files is stored as a sequence stack.
+%   The input list of files is stored as a sequence stack. In package
+%   mode we can recover the information from the details held by
+%   \LaTeXe{} (we must be in the preamble and loaded using \tn{usepackage}
+%   or \tn{RequirePackage}).
 %    \begin{macrocode}
 \seq_new:N \g_@@_stack_seq
+%<*package>
+\group_begin:
+  \cs_set_protected:Npn \@@_tmp:w #1#2#3
+    {
+      \tl_if_blank:nTF {#1}
+        {
+          \cs_set:Npn \@@_tmp:w ##1 " ##2 " ##3 \q_stop { ##2 }
+          \seq_gput_right:Nx \g_@@_stack_seq
+            {
+              \exp_after:wN \exp_after:wN \exp_after:wN
+              \@@_tmp:w
+                \exp_after:wN \tex_jobname:D
+                \exp_after:wN " \tex_jobname:D "
+                \q_stop
+            }
+        }
+        {
+          \seq_gput_right:Nn \g_@@_stack_seq {#1}
+          \@@_tmp:w
+        }
+    }
+  \exp_after:wN \@@_tmp:w \@currnamestack
+\group_end:
+%</package>
 %    \end{macrocode}
 % \end{variable}
 %
