--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -1509,6 +1509,7 @@
 %    \begin{macrocode}
 \tl_put_left:Nn \@pushfilename
   {
+    \seq_gpush:Nx \g__file_stack_seq \@currname
     \tl_put_left:Nx \l__expl_status_stack_tl
       {
         \bool_if:NTF \l__kernel_expl_bool
@@ -1516,9 +1517,21 @@
           { 0 }
       }
     \ExplSyntaxOff
+    \@pushfilenameaux
+  }
+%    \end{macrocode}
+%   This bit of trickery is needed to grab the name of the file being loaded
+%   so we can record it.
+%    \begin{macrocode}
+\cs_set_protected:Npn \@pushfilenameaux #1#2#3
+  {
+    \str_gset:Nn \g_file_current_name_str {#3}
+    #1 #2 {#3}
   }
 \tl_put_right:Nn \@popfilename
   {
+    \seq_gpop:NN \g__file_stack_seq \l__file_tmp_tl
+    \tl_gset_eq:NN \g_file_current_name_str \l__file_tmp_tl
     \tl_if_empty:NTF \l__expl_status_stack_tl
       { \ExplSyntaxOff }
       { \exp_after:wN \__expl_status_pop:w \l__expl_status_stack_tl \q_stop }
