Add new \file_parse_path:nNNN function
This is similar to \filename@parse but
- does not leave a trailing "/" in the dir part
- allows for multi-dot names
- removes any surrounding quoting marks from the path

--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -112,6 +112,27 @@
 %   If the file is not found then the \meta{str var} will be empty.
 % \end{function}
 %
+% \begin{function}[added = 2017-06-20]{\file_parse_path:nNNN}
+%   \begin{syntax}
+%     \cs{file_parse_path:nNNN} \Arg{file path} \meta{dir} \meta{name} \meta{ext}
+%   \end{syntax}
+%   Parsers the \meta{file path} and splits it into three parts, each of
+%   which is returned by settings the appropriate local string variable:
+%   \begin{itemize}
+%     \item The \meta{dir}: everything up to the last |/| (path separator}
+%       in the \meta{file path}. As with system \texttt{PATH} variables
+%       and related functions, the \meta{dir} will \emph{not} feature a trailing
+%       |/| unless it points to the root directory. If there is no path (only
+%       a file name), \meta{dir} will be empty.
+%     \item The \meta{name}: everything after the last |/| up to the last |.|,
+%       where both of those characters are optional. The \meta{name} may
+%       contain multiple |.| characters.
+%      \item The \meta{ext}: everything after the last |.| If there is no
+%        \meta{ext} in the \meta{file path}, the \TeX{} standard value
+%        \texttt{.tex} will be returned.
+%   \end{itemize}
+% \end{function}
+%
 % \begin{function}[updated = 2012-02-17]{\file_input:n}
 %   \begin{syntax}
 %     \cs{file_input:n} \Arg{file name}
@@ -964,6 +985,78 @@
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
+% \end{macro}
+% \end{macro}
+%
+% \begin{macro}{\file_parse_path:nNNN}
+% \begin{macro}[aux]
+%   {\@@_parse_path_auxi:w, \@@_parse_path_auxii:w, \@@_parse_path_auxiii:w}
+%   Parsing starts by stripping off any surrounding quotes. Assuming there is
+%   then something to read, the next step is to split off the directory.
+%   We don't want to add |/| until at least one parent directory is found,
+%   but that will loose a leading |/| (absolute path). To deal with that,
+%   there is a second test for that construct at the end of directory
+%   discovery.
+%    \begin{macrocode}
+\cs_new_protected:Npn \file_parse_path:nNNN #1#2#3#4
+  {
+    \@@_parse_path_auxi:w #1 " #1 " \q_stop #2#3#4
+  }
+\cs_new_protected:Npn \@@_parse_path_auxi:w #1 " #2 " #3 \q_stop #4#5#6
+  {
+    \str_clear:N #4
+    \str_clear:N #5
+    \str_clear:N #6
+    \tl_if_blank:nF {#2}
+     { \@@_parse_path_auxii:w #2 / \q_mark #2 \q_stop #4#5#6 }
+  }
+\cs_new_protected:Npn \@@_parse_path_auxii:w #1 / #2 \q_mark #3 \q_stop #4#5#6
+  {
+    \tl_if_blank:nTF {#2}
+      {
+        \tl_if_head_eq_charcode:nNT {#3} { / }
+          { \str_set:Nx #4 { / #4 } }
+        \tl_if_blank:nF {#1}
+          { \@@_parse_path_auxiii:w #1 . \q_stop #5#6 }
+      }
+      {
+        \str_set:Nx #4
+          {
+            #4
+            \str_if_empty:NF #4 { / }
+            #1
+          }
+        \@@_parse_path_auxii:w #2 \q_mark #3 \q_stop #4#5#6
+      }
+  }
+%    \end{macrocode}
+%   For the file name, we again need to deal with the special case of no
+%   extension given. That is handled by assuming under such circumstances
+%   these are |.tex| files. We also use a loop here to deal with multi-dot
+%   names, \emph{cf.}~how \tn{filename@parse} would deal with this.
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_parse_path_auxiii:w #1 . #2 \q_stop #3#4
+  {
+    \tl_if_blank:nTF {#2}
+      {
+        \str_if_empty:NTF #3
+          {
+            \str_set:Nn #3 {#1}
+            \str_set:Nn #4 { .tex }
+          }
+          { \str_set:Nn #4 { . #1 } }
+      }
+      {
+        \str_set:Nx #3
+          {
+            #3
+            \str_if_empty:NF #3 { . }
+            #1
+          }
+        \@@_parse_path_auxiii:w #2 \q_stop #3#4
+      }
+  }
+%    \end{macrocode}
 % \end{macro}
 % \end{macro}
 %
