Track current file dir/name/ext (fixes #345)
This should give reasonable information in many cases.

Still need to tidy up e.g. top level and \jobname limitations, etc.

Probably in package mode should also pick up and work with currfile.

--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -1509,7 +1509,7 @@
 %    \begin{macrocode}
 \tl_put_left:Nn \@pushfilename
   {
-    \seq_gpush:Nx \g__file_stack_seq { \tl_to_str:N \@currname }
+    \exp_args:Nx \__file_input_push:n { \tl_to_str:N \@currname }
     \tl_put_left:Nx \l__expl_status_stack_tl
       {
         \bool_if:NTF \l__kernel_expl_bool
@@ -1530,8 +1530,7 @@
   }
 \tl_put_right:Nn \@popfilename
   {
-    \seq_gpop:NN \g__file_stack_seq \l__file_tmp_tl
-    \str_gset_eq:NN \g_file_current_name_str \l__file_tmp_tl
+    \__file_input_pop:
     \tl_if_empty:NTF \l__expl_status_stack_tl
       { \ExplSyntaxOff }
       { \exp_after:wN \__expl_status_pop:w \l__expl_status_stack_tl \q_stop }
