--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -23,7 +23,8 @@
 %<*driver>
 \documentclass[full]{l3doc}
 \begin{document}
-  \DocInput{\jobname.dtx}
+\DocInput{\jobname.dtx}
+\PrintIndex
 \end{document}
 %</driver>
 % \fi
@@ -131,7 +132,7 @@
 %   Parsers the \meta{file path} and splits it into three parts, each of
 %   which is returned by settings the appropriate local string variable:
 %   \begin{itemize}
-%     \item The \meta{dir}: everything up to the last |/| (path separator}
+%     \item The \meta{dir}: everything up to the last |/| (path separator)
 %       in the \meta{file path}. As with system \texttt{PATH} variables
 %       and related functions, the \meta{dir} will \emph{not} feature a trailing
 %       |/| unless it points to the root directory. If there is no path (only
@@ -2418,8 +2419,6 @@
       { \tl_set:Nn #2 { \q_no_value } }
   }
 %    \end{macrocode}
-% \end{macro}
-% \end{macro}
 % \end{macro}
 %
 % \begin{macro}[added = 2012-06-24, updated = 2012-07-31, deprecated=2017-12-31]{\ior_get_str:NN}
