\file_find:nN => \file_get_full_name:nN

--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -115,9 +115,10 @@
 %   \meta{str var}, which will be empty if the file is not found.
 % \end{function}
 %
-% \begin{function}[updated = 2017-06-19]{\file_find:nN, \file_find:VN}
+% \begin{function}[updated = 2017-06-23]
+%   {\file_get_full_name:nN, \file_get_full_name:VN}
 %   \begin{syntax}
-%     \cs{file_find:nN} \Arg{file name} \meta{str var}
+%     \cs{file_get_full_name:nN} \Arg{file name} \meta{str var}
 %   \end{syntax}
 %   Searches for \meta{file name} in the path as detailed for
 %   \cs{file_if_exist:nTF}, and if found sets the \meta{str var} the
@@ -660,7 +661,7 @@
 %   higher-level
 %   functions which have already fully expanded the \meta{file name} and which
 %   need to perform multiple open or close operations. See for example the
-%   implementation of \cs{file_find:nN},
+%   implementation of \cs{file_get_full_name:nN},
 % \end{function}
 %
 % \begin{function}[added = 2014-08-23]{\__iow_with:Nnn}
@@ -880,8 +881,8 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}{\file_find:nN, \file_find:VN}
-% \begin{macro}[aux]{\@@_find_search:N}
+% \begin{macro}{\file_get_full_name:nN, \file_get_full_name:VN}
+% \begin{macro}[aux]{\@@_get_full_name_search:N}
 %   The way to test if a file exists is to try to open it: if it does not
 %   exist then \TeX{} will report end-of-file. For files which are in the
 %   current directory, this is straight-forward.  For other locations, a
@@ -889,18 +890,18 @@
 %   location is of course treated as the correct one. If nothing is found,
 %   |#2| is returned empty.
 %    \begin{macrocode}
-\cs_new_protected:Npn \file_find:nN #1#2
+\cs_new_protected:Npn \file_get_full_name:nN #1#2
   {
     \__file_name_sanitize:nN {#1} \l__file_basename_str
     \__file_name_quote:VN \l__file_basename_str \l__file_path_str
     \__ior_open:No \g_@@_internal_ior \l__file_path_str
     \ior_if_eof:NTF \g_@@_internal_ior
-      { \@@_find_search:N #2 }
+      { \@@_get_full_name_search:N #2 }
       { \str_set_eq:NN #2 \l__file_path_str }
     \ior_close:N \g_@@_internal_ior
   }
-\cs_generate_variant:Nn \file_find:nN { V }
-\cs_new_protected:Npn \@@_find_search:N #1
+\cs_generate_variant:Nn \file_get_full_name:nN { V }
+\cs_new_protected:Npn \@@_get_full_name_search:N #1
   {
     \str_clear:N #1
 %<*package>
@@ -946,14 +947,14 @@
 %    \begin{macrocode}
 \prg_new_protected_conditional:Npnn \file_if_exist:n #1 { T , F , TF }
   {
-    \file_find:nN {#1} \l__file_path_str
+    \file_get_full_name:nN {#1} \l__file_path_str
     \str_if_empty:NTF \l__file_path_str
       { \prg_return_false: }
       { \prg_return_true: }
   }
 \prg_new_protected_conditional:Npnn \file_if_exist:nN #1#2 { T , F , TF }
   {
-    \file_find:nN {#1} #2
+    \file_get_full_name:nN {#1} #2
     \str_if_empty:NTF #2
       { \prg_return_false: }
       { \prg_return_true: }
@@ -1249,7 +1250,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \ior_open:Nn #1#2
   {
-    \file_find:nN {#2} \l__file_path_str
+    \file_get_full_name:nN {#2} \l__file_path_str
     \str_if_empty:NTF \l__file_path_str
       {
         \__file_name_sanitize:nN {#2} \l__file_basename_str
@@ -1267,7 +1268,7 @@
 %    \begin{macrocode}
 \prg_new_protected_conditional:Npnn \ior_open:Nn #1#2 { T , F , TF }
   {
-    \file_find:VN \l__file_basename_str \l__file_path_str
+    \file_get_full_name:VN \l__file_basename_str \l__file_path_str
     \str_if_empty:NTF \l__file_path_str
       { \prg_return_false: }
       {
@@ -2414,7 +2415,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \file_add_path:nN #1#2
   {
-    \file_find:nN {#1} #2
+    \file_get_full_name:nN {#1} #2
     \str_if_empty:NT #2
       { \tl_set:Nn #2 { \q_no_value } }
   }
